--- a/specs/contact/contact-form.yaml
+++ b/specs/contact/contact-form.yaml
@@ -17,7 +17,7 @@ verification:
       status: planned
   e2e:
     - path: e2e/contact.spec.ts#submit-form
-      status: planned
+      status: passing
 
 flows:
   submit-message:
