--- a/specs/gallery/artwork-browsing.yaml
+++ b/specs/gallery/artwork-browsing.yaml
@@ -19,7 +19,7 @@ verification:
       status: planned
   e2e:
     - path: e2e/gallery.spec.ts#browse-artworks
-      status: planned
+      status: passing
 
 flows:
   browse:
