--- a/specs/gallery/series-filtering.yaml
+++ b/specs/gallery/series-filtering.yaml
@@ -19,7 +19,7 @@ verification:
       status: planned
   e2e:
     - path: e2e/gallery.spec.ts#filter-by-series
-      status: planned
+      status: passing
 
 flows:
   filter-by-series:
