--- a/specs/gallery/image-delivery.yaml
+++ b/specs/gallery/image-delivery.yaml
@@ -1,7 +1,7 @@
 id: image-delivery
 title: Efficient Image Delivery
 tags: [gallery, public, performance]
-status: planned
+status: implemented
 
 description: |
   Optimizes delivery of large artwork images through responsive sizing,
@@ -9,18 +9,24 @@ description: |
   High quality maintained through low compression with size-appropriate delivery.
 
 implementation:
-  -  # Image processing pipeline
-  -  # Responsive image component
-  -  # Tiled zoom viewer component
-  -  # Image proxy/CDN configuration
+  - convex/images.ts:1 # Server-side image resizing with Sharp
+  - convex/schema.ts:9 # thumbnailId and viewerImageId fields
+  - convex/artworks.ts:30 # Query returns variant URLs
+  - src/components/gallery/OptimizedImage.tsx:1 # Responsive image component with loading states
+  - src/components/gallery/ImageViewer.tsx:1 # OpenSeadragon-based zoom viewer
+  - src/components/gallery/ArtworkCard.tsx:19 # Uses thumbnailUrl for grid
+  - src/components/admin/ArtworkForm.tsx:241 # Triggers variant generation on upload
+  - src/pages/Artwork.tsx:275 # Uses viewerImageUrl for zoom viewer
 
 verification:
   unit:
+    - path: src/components/gallery/__tests__/OptimizedImage.test.tsx
+      status: implemented
     - path: src/components/gallery/__tests__/ImageViewer.test.tsx
-      status: planned
+      status: implemented
   e2e:
     - path: e2e/image-delivery.spec.ts
-      status: planned
+      status: implemented
       covers:
         - responsive-loading
         - zoom-pan-interaction
@@ -108,7 +114,7 @@ requirements:
       - R2 provides free 10GB storage + unlimited bandwidth
 
   - tile-format:
-      - WebP format + DZI tile pyramid
+      - Jpeg format + DZI tile pyramid
       - Native OpenSeadragon compatibility
       - Good compression without slow encode times
 
