--- a/specs/admin/authentication.yaml
+++ b/specs/admin/authentication.yaml
@@ -38,25 +38,25 @@ security-requirements:
 
 implementation:
   # server auth
-  - convex/auth.ts:43#login
-  - convex/auth.ts:55#validateSession
-  - convex/auth.ts:61#requireAuth
+  - convex/auth.ts#login
+  - convex/auth.ts#validateSession
+  - convex/auth.ts#requireAuth
   # protected mutations
-  - convex/artworks.ts:97#create
-  - convex/artworks.ts:125#update
-  - convex/artworks.ts:159#remove
-  - convex/series.ts:48#create
-  - convex/series.ts:71#update
-  - convex/series.ts:83#remove
-  - convex/messages.ts:40#markRead
-  - convex/messages.ts:46#markAllRead
-  - convex/messages.ts:60#remove
-  - convex/siteContent.ts:22#set
-  - convex/files.ts:7#generateUploadUrl
+  - convex/artworks.ts#create
+  - convex/artworks.ts#update
+  - convex/artworks.ts#remove
+  - convex/series.ts#create
+  - convex/series.ts#update
+  - convex/series.ts#remove
+  - convex/messages.ts#markRead
+  - convex/messages.ts#markAllRead
+  - convex/messages.ts#remove
+  - convex/siteContent.ts#set
+  - convex/files.ts#generateUploadUrl
   # client
-  - src/lib/auth.tsx:23#AuthProvider
-  - src/lib/auth.tsx:60#useAuth
-  - src/pages/Admin.tsx:11
+  - src/lib/auth.tsx#AuthProvider
+  - src/lib/auth.tsx#useAuth
+  - src/pages/Admin.tsx#Admin
 
 verification:
   unit:
