--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
       - run: bun install
-      - run: bunx playwright install --with-deps
+      - run: bunx playwright install --with-deps chromium
       - run: bun run e2e
       - uses: actions/upload-artifact@v4
         if: failure()
