--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,11 +17,19 @@ jobs:
 
   e2e:
     runs-on: blacksmith-4vcpu-ubuntu-2404
+    env:
+      VITE_CONVEX_URL: http://127.0.0.1:3210
+      CONVEX_DEPLOYMENT: local:ci-e2e
     steps:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
       - run: bun install
       - run: bunx playwright install --with-deps chromium
+      - name: Start local Convex backend
+        run: |
+          bunx convex dev --local &
+          timeout 60 bash -c 'until curl -s http://127.0.0.1:3210 > /dev/null 2>&1; do sleep 1; done'
+          bunx convex env set ADMIN_PASSWORD admin
       - run: bun run e2e
       - uses: actions/upload-artifact@v4
         if: failure()
