--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -25,9 +25,10 @@ jobs:
       - run: bun install
       - run: bunx playwright install --with-deps chromium
       - name: Start local Convex backend
+        env:
+          CONVEX_AGENT_MODE: anonymous
         run: |
-          echo 'CONVEX_DEPLOYMENT=local:ci' > .env.local
-          bunx convex dev --dev-deployment local &
+          bunx convex dev &
           timeout 60 bash -c 'until curl -s http://127.0.0.1:3210 > /dev/null 2>&1; do sleep 1; done'
           bunx convex env set ADMIN_PASSWORD admin
       - run: bun run e2e
