--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 CONVEX_DEPLOYMENT=
 VITE_CONVEX_URL=
+
+# GitHub CLI token for CodeRabbit review skill
+# Create fine-grained PAT at: https://github.com/settings/personal-access-tokens/new
+# Required permissions: pull_requests (read & write)
+GH_TOKEN=
